# Tak

./: .gitignore  CHANGELOG.md  README.md  Tak.cabal  temo  temp  temp.c  temp.hs
LambdaTak/: CAT  CMakeLists.txt  neurelnet.h5  tak_model_8000.weights  temo  temp  temp.c  temp2  test1.ptn
LambdaTak/ai/: accelerateNeuralNet.c  accelerateNeuralNet.h  eval.c  eval.h  modelVisualization.py  monteCarlo.c  monteCarlo.h  monteCarloGraphSearch.c  monteCarloGraphSearch.h  monteCarloTable.c  monteCarloTable.h  neuralNetCreator.py  neuralNetTrainer.c  neuralNetTrainer.h  neuralNetworks.c  neuralNetworks.h  policyNetwork.c  policyNetwork.h  pythonTrainer.c  pythonTrainer.h  pythonTrainer.py  qlearner.c  qlearner.h  runTraining.c  searches.c  searches.h  trainer.c  trainer.h  transposition.c  transposition.h  utils.c  utils.h
LambdaTak/build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lambdaTak  testSuite
LambdaTak/build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lambdaTak  testSuite
LambdaTak/lib/: arenaAllocator.c  arenaAllocator.h  board.c  board.h  magic.h  moves.c  moves.h  perft.c  perft.h  ptn.c  tps.c  zobrist.c
LambdaTak/n_models/: tak_model.weights_2  tak_model.weights_3
LambdaTak/neurelnet.mlpackage/: Manifest.json
LambdaTak/neurelnet.mlpackage/Data/com.apple.CoreML/: model.mlmodel
LambdaTak/src/: aiPlayer.c  aiPlayer.h  board.c  board.h  eval.c  eval.h  gamerunner.c  magic.h  main.c  monteCarlo.c  moves.c  moves.h  perft.c  perft.h  ptn.c  ptn.h  searches.c  searches.h  sorcery.c  tps.c  tps.h  zobrist.c
LambdaTak/tests/: testBoard.c  testGeneral.c  testGeneral.h  testMain.c  testMove.c  testTPS.c
LambdaTak/tests/ptn/: test2.ptn  test3.ptn  test4.ptn  test6.ptn  test7.ptn  test8.ptn  test9.ptn
TakServer/: Tak.cabal
TakServer/ai/: AIPlayer.hs  Eval.hs  EvalMut.hs  MoveGen.hs  Searches.hs
TakServer/lib/: Board.hs  Moves.hs  MutableState.hs  PTN.hs  TPS.hs  WebTypes.hs
TakServer/test/: Main.hs  TestBoard.hs  TestGeneral.hs  TestGeneralMutable.hs  TestMoves.hs  TestMutableState.hs  TestPTN.hs  TestTPS.hs
ai/: AIPlayer.hs  Eval.hs  EvalMut.hs  Main.hs  MoveGen.hs  MoveGeneration.hs  Searches.hs
app/: GameServer.hs  Main.hs  TerminalGame.hs  TerminalGamePlayer.hs
frontEnd/: index.html  package-lock.json  package.json
frontEnd/src/: AppOne.ts  board.js  main.js
lib/: Board.hs  Moves.hs  MutableState.hs  PTN.hs  Pieces.hs  TPS.hs  WebTypes.hs
test/: Main.hs  TestBoard.hs  TestGeneral.hs  TestGeneralMutable.hs  TestMoves.hs  TestMutableState.hs  TestPTN.hs  TestTPS.hs
test/ptn/: test5
