cabal-version:      3.0
name:               Tak
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             zchown
maintainer:         91749140+zchown@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall 
                 -Wcompat 
                 -Widentities 
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns 
                 -Wmissing-home-modules 
                 -Wpartial-fields 
                 -Wredundant-constraints
                 -Wno-orphans 
                 -threaded
                 -rtsopts
                 -with-rtsopts=-M4G

library
    import:           warnings
    exposed-modules:  MyLib
                      Board
                      TPS
                      Moves
                      PTN
    -- other-modules: 
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , matrix 
                    , sequence
                    , text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable Tak
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        Tak

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Tak-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestBoard
                      TestTPS
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hspec ^>=2.10.0,
        directory,
        filepath,
        text,
        Tak
    buildable = True
