cabal-version:      3.0
name:               Tak
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             zchown
maintainer:         91749140+zchown@users.noreply.github.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall 
                 -Wcompat 
                 -Widentities 
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns 
                 -Wmissing-home-modules 
                 -Wpartial-fields 
                 -Wredundant-constraints
                 -Wno-orphans 
                 -threaded

library
    import:           warnings
    exposed-modules:  MyLib
                      Board
                      TPS
                      Moves
                      PTN
    build-depends:    base ^>=4.16.4.0
                    , matrix 
                    , sequence
                    , text
                    , parsec
                    , aeson
                    , vector
                    , parallel
                    , deepseq
                    , split
    hs-source-dirs:   lib
    default-language: Haskell2010

executable Tak
    import:           warnings
    main-is:          Main.hs
    other-modules:    TerminalGamePlayer
                      GameServer
    build-depends:
        base ^>=4.16.4.0,
        Tak,
        text,
        matrix,
        directory,
        filepath,
        scotty,
        aeson,
        containers,
        stm,
        wai-cors,
        network,
        bytestring,
        websockets
    hs-source-dirs:   app
    default-language: Haskell2010

executable TakAI
    import:           warnings
    main-is:          Main.hs
    other-modules:    AIPlayer
                      MoveGen
                      Searches
                      Eval
    build-depends:
        base ^>=4.16.4.0,
        Tak,
        text,
        matrix,
        aeson,
        scotty,
        stm,
        containers,
        wai-cors,
        vector,
        random,
        bytestring,
        network,
        http-conduit,
        random-shuffle,
        vector-algorithms,
        mtl
    hs-source-dirs:   ai
    default-language: Haskell2010

test-suite Tak-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestBoard
                      TestTPS
                      TestPTN
                      TestMoves
                      TestGeneral
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hspec ^>=2.10.0,
        matrix,
        directory,
        filepath,
        text,
        Tak
    buildable = True
